[package]
name = "oxos"
version = "0.1.0"
authors = ["ryan-jacobs"]
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
cc = "1.0.3"
nasm-rs = "0.1.5"