[package]
name = "oxos"
version = "0.1.0"
authors = ["ryan-jacobs"]
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.5.2"
bitfield = "0.13.2"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[build-dependencies]
cc = "1.0.3"
nasm-rs = "0.1.5"